* MAINTAINERS: Change my mailing address.
From-SVN: r56555

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-24  Geoffrey Keating  <geoffk@redhat.com>
+
+	* MAINTAINERS: Change my mailing address.
+
 2002-08-21  Paolo Carlini  <pcarlini@unitus.it>
 
 	* MAINTAINERS (Write After Approval): Remove myself.
