--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,31 @@
+2002-08-24  Mark Wielaard <mark@klomp.org>
+
+	* Makefile.am (libgcj_la_SOURCES): Remove name-finder.cc.
+	(core_java_source_files): Add VMThrowable.java and NameFinder.java
+	(nat_source_files): Remove natThrowable.cc, add natVMThrowable.cc
+	and natNameFinder.cc.
+	* Makefile.in: Regenerate.
+	* prims.cc: Use trace_enabled from VMThrowable.
+	* name-finder.cc: Removed.
+	* gcj/javaprims.h: Add class VMThrowable.
+	* gnu/gcj/runtime/NameFinder.java: New file.
+	* gnu/gcj/runtime/natNameFinder.cc: Likewise.
+	* include/name-finder.h: Removed.
+	* java/lang/Throwable.java (printStackTrace (PrintStream)): Use new
+	method stackTraceString().
+	(printStackTrace (PrintWriter)): Likewise.
+	(stackTraceString): Complete rewrite of old printStackTrace using
+	StringBuffer.
+	(stackTraceStringBuffer): New helper method for stackTraceString().
+	(fillInStackTrace): Delegate to VMTrowable.
+	(getStackTrace): Likewise.
+	(getStackTrace0): Removed. 
+	(trace_enabled, stackTraceBytes): Moved to new VMThrowable.java.
+	(setStackTrace): Copy given array.
+	* java/lang/natThrowable.cc: Removed (replaced by natVMThrowable).
+	* java/lang/VMThrowable.java: New class.
+	* java/lang/natVMThrowable.cc: New file.
+
 2003-08-23  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/URLConnection.java,
