--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-24  Matt Austern  <austern@apple.com>
+
+	* tree.c (lvalue_p_1): Add argument for whether casts of lvalues
+	are allowable.
+	(real_lvalue_p): Update caller.
+	(lvalue_p): Ditto.
+	(non_cast_lvalue_or_else): New.
+	* tree.h: Declare it.
+        * typeck.c (build_unary_op): Use non_cast_lvalue_or_else.
+
 2002-08-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* typeck.c (build_class_member_access_expr): Handle COMPOUND_EXPR
