--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-24  Matt Austern  <austern@apple.com>
+
+	* g++.dg/ext/lvaddr.C: New test.
+	* g++.dg/ext/lvcast.C: New test.
+	
 2002-08-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* testsuite/g++.dg/inherit/cond1.C: New test.
