--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-25  Adam Megacz <adam@xwt.org>
+
+	* lib/libjava.exp: don't apply -no-install when platform is mingw.
+
 2002-08-16  H.J. Lu <hjl@gnu.org>
 
 	* lib/libjava.exp (gcc_version): Removed.
