--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-25  Andre Leis <a.leis@gmx.net>
+	    David Billinghurst (David.Billinghurst@riotinto.com>
+
+	* sysdep.c (__gnat_ttyname): include <termios.h> on cygwin
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
