--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-26  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-opts.c (find_opt): Don't complain about wrong languages
+	here.  Return exact matches even for wrong language.
+	(c_common_decode_option): Complain about wrong languages
+	here.
+
 2002-08-24  Stuart Hastings  <stuart@apple.com>
 
 	* function.h (struct function): Add flag
