--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-26  Ziemowit Laski  <zlaski@apple.com>
+
+        * objc.dg/super-class-2.m: New test.
+
 2002-08-24  Matt Austern  <austern@apple.com>
 
 	* g++.dg/ext/lvaddr.C: New test.
