--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-26  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (try_builtin_assignconv): Allow narrowing primitive
+	conversion if RHS_TYPE is byte, short, or char.
+
 2002-08-22  Tom Tromey  <tromey@redhat.com>
 
 	* gcj.texi (Invoking gij): Document -cp and -classpath.
