--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-27  Gabriel Dos Reis  <gdr@soliton.integrable-solutions.net>
+
+	* doc/cpp.texi (Common Predefined Macros): Don't mess with table
+	delimiter. 
+
 2002-08-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* c-common.c (cpp_define_data_format): New function.
