--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 27 13:53:57 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* sh.h (MAX_FIXED_MODE_SIZE): Define.
+
 2002-08-27  Gabriel Dos Reis  <gdr@soliton.integrable-solutions.net>
 
 	* doc/cpp.texi (Common Predefined Macros): Don't mess with table
