--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-27  David Edelsohn  <edelsohn@gnu.org>
+
+	* longlong.h: Import current PowerPC defintion from GMP-4.1.
+
+	* config/rs6000/rs6000.h (MIN_UNITS_PER_WORD): Add IN_LIBGCC2 case.
+
+	* config/rs6000/linux64.h (ADJUST_FIELD_ALIGN): Undef before define.
+
 Tue Aug 27 13:53:57 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.h (MAX_FIXED_MODE_SIZE): Define.
