--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 27 18:01:45 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* libgcc2.c (__bb_exit_func): Properly write the summarized statistics.
+
 Tue Aug 27 18:00:11 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (classify_argument): Properly compute word size of the analyzed object.
