--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-26  Tom Tromey  <tromey@redhat.com>
+
+	* libjava.compile/narrow_case.java: New file.
+
 2002-08-25  Adam Megacz <adam@xwt.org>
 
 	* lib/libjava.exp: don't apply -no-install when platform is mingw.
