--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,15 @@
+2002-08-27  Tony Kimball <alk@pobox.com>
+            Tom Tromey  <tromey@redhat.com>
+
+	* java/net/natPlainDatagramSocketImpl.cc (NATIVE_CLOSE): New
+	define.
+	(::close): Removed.
+	(PlainDatagramSocketImpl::close): Use NATIVE_CLOSE.
+	* java/net/natPlainSocketImpl.cc (NATIVE_CLOSE): New define.
+	(::close): Removed.
+	(PlainSocketImpl::close): Use NATIVE_CLOSE.
+	* include/win32.h (getcwd): Removed declaration.  Include io.h.
+
 2002-08-25  Adam Megacz <adam@xwt.org>
 
 	* include/win32.h (getcwd): copied function declaration as
