--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 27 19:18:16 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (ix86_expand_int_movcc): Fix RTL sharing problem
+
 Tue Aug 27 18:01:45 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* libgcc2.c (__bb_exit_func): Properly write the summarized statistics.
