--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-27  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/offsetof1.C: Avoid cast warning.
+
 2002-08-26  Ziemowit Laski  <zlaski@apple.com>
 
         * objc.dg/super-class-2.m: New test.
