Added -Wundeclared-selector ObjC command line option
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56615 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+Tue Aug 27 23:03:52 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* c-common.c (warn_undeclared_selector): New variable.
+	* c-common.h (warn_undeclared_selector): Idem.
+	* c-opts.c (c_common_decode_option): Set warn_undeclared_selector
+	to on when -Wundeclared-selector is found.
+	(COMMAND_LINE_OPTIONS): Added -Wundeclared-selector.
+	* objc/objc-act.c (build_selector_expr): If
+	warn_undeclared_selector is set, check that the selector has
+	already been defined, and emit a warning if not.
+
 2002-08-27  Nick Clifton  <nickc@redhat.com>
             Catherine Moore  <clm@redhat.com>
             Jim Wilson  <wilson@cygnus.com>
