--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 27 22:23:22 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* objc.dg/undeclared-selector.m: New test.
+
 2002-08-27  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/other/offsetof1.C: Avoid cast warning.
