--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* c-common.c (warn_abi): New variable.
+	* c-common.h (warn_abi): Likewise.
+	* c-opts.c (COMMAND_LINE_OPTIONS): Add -Wabi.
+	(c_common_decode_option): Handle it.
+	* doc/invoke.texi:P Document -Wabi.
+	
 Tue Aug 27 23:03:52 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* c-common.c (warn_undeclared_selector): New variable.
