invoke.texi: Document -Wabi.
2002-08-27  Mark Mitchell  <mark@codesourcery.com>

	* doc/invoke.texi: Document -Wabi.

2002-08-27  Mark Mitchell  <mark@codesourcery.com>

	* cp-tree.h (warn_abi): Declare it.
	* decl.c (warn_abi): Define it.
	(cxx_decode_option): Set it.
	* class.c (layout_virtual_bases): Warn about bugs in G++ that
	result in incorrect object layouts.
	(layout_class_type): Likewise.

2002-08-27  Mark Mitchell  <mark@codesourcery.com>

	* testsuite/g++.dg/abi/bitfield5.C: New test.
	* testsuite/g++.dg/abi/vbase10.C: Likewise.

From-SVN: r56623

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,12 @@
+2002-08-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* cp-tree.h (warn_abi): Declare it.
+	* decl.c (warn_abi): Define it.
+	(cxx_decode_option): Set it.
+	* class.c (layout_virtual_bases): Warn about bugs in G++ that
+	result in incorrect object layouts.
+	(layout_class_type): Likewise.
+
 2002-08-22  Jason Merrill  <jason@redhat.com>
 
 	PR c++/5607
