--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-27  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/invoke.texi: Document -Wabi.
+	
 2002-08-23  David Edelsohn  <edelsohn@gnu.org>
 
         * config/rs6000/rs6000.c (rs6000_select_section): Treat
