--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-27  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/reflect/natConstructor.cc (newInstance): Initialize
+	class.
+	* java/lang/reflect/natMethod.cc (invoke): Initialize class.
+
 2002-08-27  Michael Koch <konqueror@gmx.de>
 
 	* java/net/BindException.java,
