--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-28  Michael Koch <konqueror@gmx.de>
+
+	* java/net/Authenticator.java: added some documentation.
+
 2002-08-27  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/reflect/natConstructor.cc (newInstance): Initialize
