--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-28  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* bugs.texi, news.texi: Update URLs for online news and bugs
+	lists.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
