--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+Wed Aug 28 15:35:17 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* sh.c (calc_live_regs): Save FPSCR_REG in an interrupt handler
+	if it is ever live.
+
+	* sh.c (sh_handle_interrupt_handler_attribute): Reject interrupt_handler
+	attribute for SHCOMPACT.
+
+	* sh.h (OVERRIDE_OPTIONS): If align_function isn't set, set it
+	appropriately.
+	(FUNCTION_BOUNDARY): Specify only the minimum alignment required
+	by the ABI.
+
+	* sh.h (SH5_WOULD_BE_PARTIAL_NREGS): Also handle TImode case.
+
 2002-08-28  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config.gcc (mips*-*-netbsd*): Set target_cpu_default to
