--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* install.texi (hppa64-hp-hpux11*): Document installation procedure.
+
 2002-08-28  Jason Merrill  <jason@redhat.com>
 
 	* c-common.c (c_expand_expr) [STMT_EXPR]: If the last expression is
